test: use puppeteer to test all examples
This commit replaces the itowns-testing.js hack with puppeteer (https://github.com/GoogleChrome/puppeteer).

Advantages:
  - a real browser (Chrome) instead of node + mocks for missing features
  - WebGL capable
  - Can take screenshots and save them (not used on Travis yet)
  - Debuggable using Chrome Dev tools (Chrome instance used by puppeteer can be headless or not)

Each example now have at least one test to verify we can open it and that it
reaches the "mainloop has finished running" state.

I also implemented a couple tests for other examples (see 3dtiles and globe).

Adding test is easy, and we could add more to exercise more parts of itowns.

Last but not least: with this change the separation of examples in 2 files (html + js) is
not needed anymore.

--- a/examples/planar.html
+++ b/examples/planar.html
@@ -28,11 +28,77 @@
         <script src="../dist/debug.js"></script>
         <script src="js/GUI/GuiTools.js"></script>
         <script type="text/javascript">
-            var renderer; var exports = {};
-            var proj4 = itowns.proj4;
-        </script>
-        <script src="planar.js"></script>
-        <script type="text/javascript">
+            // # Planar (EPSG:3946) viewer
+
+            var extent;
+            var viewerDiv;
+            var view;
+
+            // Define projection that we will use (taken from https://epsg.io/3946, Proj4js section)
+            itowns.proj4.defs('EPSG:3946',
+                '+proj=lcc +lat_1=45.25 +lat_2=46.75 +lat_0=46 +lon_0=3 +x_0=1700000 +y_0=5200000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs');
+
+            // Define geographic extent: CRS, min/max X, min/max Y
+            extent = new itowns.Extent(
+                'EPSG:3946',
+                1837816.94334, 1847692.32501,
+                5170036.4587, 5178412.82698);
+
+            // `viewerDiv` will contain iTowns' rendering area (`<canvas>`)
+            viewerDiv = document.getElementById('viewerDiv');
+
+            // Instanciate PlanarView*
+            view = new itowns.PlanarView(viewerDiv, extent);
+            setupLoadingScreen(viewerDiv, view);
+            view.tileLayer.disableSkirt = true;
+
+            // Add an WMS imagery layer (see WMSProvider* for valid options)
+            view.addLayer({
+                url: 'https://download.data.grandlyon.com/wms/grandlyon',
+                networkOptions: { crossOrigin: 'anonymous' },
+                type: 'color',
+                protocol: 'wms',
+                version: '1.3.0',
+                id: 'wms_imagery',
+                name: 'Ortho2009_vue_ensemble_16cm_CC46',
+                projection: 'EPSG:3946',
+                format: 'image/jpeg',
+                updateStrategy: {
+                    type: itowns.STRATEGY_DICHOTOMY,
+                    options: {},
+                },
+            });
+
+            // Add an WMS elevation layer (see WMSProvider* for valid options)
+            view.addLayer({
+                url: 'https://download.data.grandlyon.com/wms/grandlyon',
+                type: 'elevation',
+                protocol: 'wms',
+                networkOptions: { crossOrigin: 'anonymous' },
+                id: 'wms_elevation',
+                name: 'MNT2012_Altitude_10m_CC46',
+                projection: 'EPSG:3946',
+                heightMapWidth: 256,
+                format: 'image/jpeg',
+            });
+            // Since the elevation layer use color textures, specify min/max z
+            view.tileLayer.materialOptions = {
+                useColorTextureElevation: true,
+                colorTextureElevationMinZ: 37,
+                colorTextureElevationMaxZ: 240,
+            };
+
+            view.camera.setPosition(new itowns.Coordinates('EPSG:3946', extent.west(), extent.south(), 2000));
+            // Then look at extent's center
+            view.camera.camera3D.lookAt(extent.center().xyz());
+
+            // instanciate controls
+            // eslint-disable-next-line no-new
+            new itowns.PlanarControls(view, {});
+
+            // Request redraw
+            view.notifyChange(true);
+
             if (view.isDebugMode) {
                 var menuGlobe = new GuiTools('menuDiv', view);
                 menuGlobe.addImageryLayersGUI(view.getLayers(function (l) { return l.type === 'color'; }));
