--- a/examples/externalscene.html
+++ b/examples/externalscene.html
@@ -14,10 +14,24 @@
         <script src="../dist/itowns.js"></script>
         <script src="js/loading_screen.js"></script>
         <script type="text/javascript">
-            var renderer;
-            var exports = {};
-            var THREE = itowns.THREE;
+            var positionOnGlobe = { longitude: 2.351323, latitude: 48.856712, altitude: 25000000 };
+
+            var scene = new itowns.THREE.Scene();
+
+            // iTowns namespace defined here
+            var viewerDiv = document.getElementById('viewerDiv');
+            var globeView = new itowns.GlobeView(
+                    viewerDiv, positionOnGlobe, { scene3D: scene });
+            setupLoadingScreen(viewerDiv, globeView);
+
+            globeView.mainLoop.name = 'external-ML';
+
+            function addLayerCb(layer) {
+                return globeView.addLayer(layer);
+            }
+
+            itowns.Fetcher.json('./layers/JSONLayers/Ortho.json').then(addLayerCb);
+            itowns.Fetcher.json('./layers/JSONLayers/IGN_MNT.json').then(addLayerCb);
         </script>
-        <script src="externalscene.js"></script>
     </body>
 </html>
